# geolocation_project

gnu_radio/: Reciever.grc  Reciever.py  Transmitor.grc  correlated.grc  phase_tune.grc  phase_tune.py  sencond_reciever.grc  simulate_input.grc
gr-AoA_mod/: CMakeLists.txt  MANIFEST.yml
gr-AoA_mod/.conda/: README.md
gr-AoA_mod/.conda/recipe/: meta.yaml
gr-AoA_mod/apps/: CMakeLists.txt
gr-AoA_mod/cmake/Modules/: gnuradio-AoA_modConfig.cmake
gr-AoA_mod/docs/: CMakeLists.txt  README.AoA_mod
gr-AoA_mod/docs/doxygen/: CMakeLists.txt  Doxyfile.in
gr-AoA_mod/docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
gr-AoA_mod/examples/: CMakeLists.txt
gr-AoA_mod/grc/: AoA_mod_phase_to_angle.block.yml  AoA_mod_send_to_server.block.yml  CMakeLists.txt
gr-AoA_mod/lib/: CMakeLists.txt
gr-AoA_mod/python/AoA_mod/: phase_to_angle.py  send_to_server.py
helper_bash_control/: build.sh  build_and_run_python.sh
intersection/: geolocation_sim.grc  geolocation_sim.py
intersection/gr-geolocation_blocks/: CMakeLists.txt  MANIFEST.md
intersection/gr-geolocation_blocks/.conda/: README.md
intersection/gr-geolocation_blocks/apps/: CMakeLists.txt
intersection/gr-geolocation_blocks/docs/: CMakeLists.txt  README.geolocation_blocks
intersection/gr-geolocation_blocks/grc/: CMakeLists.txt
intersection/gr-geolocation_blocks/lib/: CMakeLists.txt
intersection/gr-geolocation_blocks/python/geolocation_blocks/bindings/: CMakeLists.txt  python_bindings.cc
intersection/testing_folder/: dashboard.py  test_geolocation.py  test_geolocation_plot.py
server/: client.py  geolocation.py  main.py  server.py
(+18 files in other folders)
